:lipstick: Add styles and icon

--- a/app/bugs/bug-list/bug-list.component.html
+++ b/app/bugs/bug-list/bug-list.component.html
@@ -1,1 +1,39 @@
-<h1>Bug list component</h1>
+<div class="row">
+  <div class="col-xs-6">
+    <h1>Logged Bugs</h1>
+  </div>
+  <div class="col-xs-6 text-xs-right">
+    <button class="btn btn-success btn-lg">
+      <i class="fa fa-plus" aria-hidden="true"></i>
+      Add Bug
+    </button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <table class="table">
+
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Status</th>
+          <th>Severity</th>
+          <th>Description</th>
+          <th>Logged By</th>
+          <th>Date</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Some bug</td>
+          <td>In Progress</td>
+          <td>Severe</td>
+          <td>This bug happened</td>
+          <td>Colin</td>
+          <td>10/11/2019</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
