--- a/app/navbar/navbar.component.html
+++ b/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar-dark bg-inverse">
   <div class="container">
-    <a href="#" class="navbar-brand">
+    <a routerLink="" class="navbar-brand">
       <img src="/app/assets/images/angular2-bugged-out-11-asset-buggedout-logo.png" alt="Bugged Out Logo">
     </a>
     <ul class="nav navbar-nav float-xs-right">
       <li class="nav-item dropdown">
         <a
-          href="#"
+          routerLink=""
           class="nav-link dropdown-toggle"
           id="nav-dropdown" data-toggle="dropdown"
           aria-haspopup="true"
