--- a/app/bugs/bug-list/bug-list.component.html
+++ b/app/bugs/bug-list/bug-list.component.html
@@ -3,7 +3,11 @@
     <h1>Logged Bugs</h1>
   </div>
   <div class="col-xs-6 text-xs-right">
-    <button class="btn btn-success btn-lg">
+    <button
+      class="btn btn-success btn-lg"
+      [attr.data-target]=" '#' + bugDetail.modalId"
+      data-toggle="modal"
+    >
       <i class="fa fa-plus" aria-hidden="true"></i>
       Add Bug
     </button>
@@ -25,7 +29,11 @@
       </thead>
 
       <tbody>
-        <tr *ngFor="let bug of bugs">
+        <tr
+          *ngFor="let bug of bugs"
+          [attr.data-target]=" '#' + bugDetail.modalId"
+          data-toggle="modal"
+        >
           <td>{{bug.title}}</td>
           <td>{{bug.status}}</td>
           <td>{{bug.severity}}</td>
@@ -37,3 +45,5 @@
     </table>
   </div>
 </div>
+
+<bug-detail #bugDetail></bug-detail>
