--- a/app/bugs/bug-list/bug-list.component.html
+++ b/app/bugs/bug-list/bug-list.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-xs-6 text-xs-right">
     <button
-      class="btn btn-success btn-lg"
+      class="btn btn-lg btn-success"
       [attr.data-target]=" '#' + bugDetail.modalId"
       data-toggle="modal"
     >
