--- a/app/bugs/bug-detail/bug-detail.component.html
+++ b/app/bugs/bug-detail/bug-detail.component.html
@@ -1,7 +1,8 @@
 <div class="modal fade" [id]="modalId">
   <div class="modal-dialog modal-lg" role-="document">
     <div class="modal-content">
-      <form [formGroup]="bugForm">
+      <form [formGroup]="bugForm" #form>
+        state: {{form.className}}
         <div class="modal-body">
           <fieldset class="form-inline">
 
@@ -20,6 +21,7 @@
                 <option value="5">Declined</option>
               </select>
             </div>
+
           </fieldset>
 
           <div id="severity-form-group" class="form-group float-xs-left">
@@ -34,7 +36,8 @@
 
           <div class="form-group">
             <label for="desc-area" class="sr-only">Description</label>
-            <textarea id="desc-area" rows="10" class="form-control" placeholder="Type a description of your bug" formControlName="description">
+            <textarea id="desc-area" rows="10" class="form-control" placeholder="Type a description of your bug"
+              formControlName="description">
             </textarea>
           </div>
         </div>
