--- a/app/bugs/bug-detail/bug-detail.component.css
+++ b/app/bugs/bug-detail/bug-detail.component.css
@@ -36,3 +36,22 @@
   text-align: center;
   padding-bottom: 4rem;
 }
+
+textarea {
+  transition: border-color 0.4s ease;
+}
+
+textarea:focus {
+  border-color: #3f515a;
+}
+
+/* Validation styles */
+textarea.ng-invalid.ng-dirty {
+  border-color: #c62828;
+}
+
+#title-field.ng-invalid.ng-dirty {
+  border-left: 5px solid #c62828;
+  padding-left: 5px;
+  transition: border-width 0.2s ease;
+}
