--- a/app/bugs/bug-list/bug-list.component.html
+++ b/app/bugs/bug-list/bug-list.component.html
@@ -7,6 +7,7 @@
       class="btn btn-lg btn-success"
       [attr.data-target]=" '#' + bugDetail.modalId"
       data-toggle="modal"
+      (click)="bugDetail.freshForm()"
     >
       <i class="fa fa-plus" aria-hidden="true"></i>
       Add Bug
@@ -33,6 +34,7 @@
           *ngFor="let bug of bugs"
           [attr.data-target]=" '#' + bugDetail.modalId"
           data-toggle="modal"
+          (click)="bugDetail.configureForm(bug)"
         >
           <td>{{bug.title}}</td>
           <td>{{bug.status}}</td>
