--- a/app/bugs/bug-detail/bug-detail.component.html
+++ b/app/bugs/bug-detail/bug-detail.component.html
@@ -43,19 +43,15 @@
         </div>
 
         <div class="modal-footer">
-          <button
-            class="btn-danger btn-xl"
-            type="button"
-            (click)="removeBug()"
-            data-dismiss="modal"
-            *ngIf="currentBug.id"
-          >
+          <button class="btn-danger btn-xl" type="button" (click)="removeBug()" data-dismiss="modal"
+            *ngIf="currentBug.id">
             Delete
           </button>
           <button class="btn btn-secondary btn-xl" type="button" data-dismiss="modal">
             Cancel
           </button>
-          <button class="btn btn-success btn-xl" type="submit" data-dismiss="modal" (click)="submitForm()">
+          <button class="btn btn-success btn-xl" type="submit" data-dismiss="modal" (click)="submitForm()"
+            [disabled]="bugForm.invalid">
             Save
           </button>
         </div>
