--- a/app/bugs/bug-detail/bug-detail.component.html
+++ b/app/bugs/bug-detail/bug-detail.component.html
@@ -14,11 +14,7 @@
             <div class="form-group float-xs-right">
               <label for="status-dropdown" class="sr-only">Status</label>
               <select id="status-dropdown" class="form-control btn btn-primary" formControlName="status">
-                <option value="1">Logged</option>
-                <option value="2">Recreated</option>
-                <option value="3">In Progress</option>
-                <option value="4">Fixed</option>
-                <option value="5">Declined</option>
+                <option *ngFor="let status of statusArr" [value]="status">{{statuses[status]}}</option>
               </select>
             </div>
 
@@ -27,10 +23,7 @@
           <div id="severity-form-group" class="form-group float-xs-left">
             <label for="severity-dropdown" class="sr-only">Severity Dropdown</label>
             <select id="severity-dropdown" class="form-control" formControlName="severity">
-              <option value="1">Severe</option>
-              <option value="2">Medium</option>
-              <option value="3">Low</option>
-              <option value="4">Cosmetetic</option>
+              <option *ngFor="let severity of severityArr" [value]="severity">{{severities[severity]}}</option>
             </select>
           </div>
 
