--- a/app/bugs/bug-detail/bug-detail.component.html
+++ b/app/bugs/bug-detail/bug-detail.component.html
@@ -1,7 +1,7 @@
-<div class="modal fade" [id]="modalId">
+<div class="modal fade" [id]="modalId" data-backdrop="static">
   <div class="modal-dialog modal-lg" role-="document">
     <div class="modal-content">
-      <form [formGroup]="bugForm" #form>
+      <form [formGroup]="bugForm">
 
         <div class="modal-body">
           <fieldset class="form-inline">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="modal-footer">
-          <button class="btn-danger btn-xl" type="button" (click)="removeBug()" data-dismiss="modal"
+          <button class="btn btn-danger btn-xl" type="button" (click)="removeBug()" data-dismiss="modal"
             *ngIf="currentBug.id">
             Delete
           </button>
